--- a/HTMLPages/homepage.css
+++ b/HTMLPages/homepage.css
@@ -7,11 +7,47 @@
     float: left;
     background-color: dimgray;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    height: 500px;
+    height: 300px;
 }
 .content-card:hover{
  -ms-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -o-transform: scale(1.1);
+}
+
+
+
+.content-card img{
+    width: 150px;
+    height: 150px;
+    margin-left: 65px;
+    margin-top: 60px;
+    
+}
+
+
+.content-text{
+    font-family: 'Oswald', sans-serif;
+    color: white;
+    text-align: center;
+    font-size: 50px;
+}
+
+
+header{
+    font-family: 'Oswald', sans-serif;
+    height: 100vh;
+    position: relative;
+    
+    
+    
+    
+    
+}
+
+
+.content-wrapper{
+    width: 900px;
+    align-content: center;
 }
